main_landscape.css
html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
*, *:before, *:after {
  padding: 0;
  margin: 0;
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
  white-space:nowrap;
}
body {
  height: 100vh;
  background-image: url(images/background.jpg);
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  min-height: 100vh;
  -webkit-text-size-adjust: none;
   -moz-text-size-adjust: none;
    -ms-text-size-adjust: none;
        text-size-adjust: none;
  /**background:  linear-gradient(90deg, #ff95c8, #7FB1ED);
  background-size: 100% 200%;
  /**margin: auto;
  width: 100vh;
  max-width: 100vw;
  min-width: 400px;*/
}

/* @media only screen and (prefers-color-scheme: light), (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
.tablemobile {
    overflow-x: hidden;
    display: block;
}
} */

.pagetop{
  position:relative;
  display: block;
  transform: translate(0%,-50%);
  /* background-color: #FFFFFF; */
  top: 50%;
  display: inline-table;

}
.pagetop h1 {
font-family: "Creepster", cursive;
display:flexbox;
font-weight: 400;
flex-direction: column;
font-size: calc(3rem + 0.7vw);
text-align: right;
padding-right: 10px;
text-shadow: 4px 6px #FFFFFF;
} 
.pagetop h3 {
font-family: "Bona Nova SC", serif;
color: #000000 !important;
font-style: normal;
font-size:4vmin;
text-align: right;
font-weight: 200;
} 
.pagetop h4 {
  font-family: "Roboto", sans-serif;
  display:inline;
  font-weight: 400;
  color: #000000;
  font-size: 2.5vmin;
  text-align: right;
  /* position: absolute;
  right: 50%;
  transform: translateX(100%);
  white-space:pre-wrap; */
  float:right;
  
}
  
  #t1 {
    display:inline-table;
    width: calc(50% - 10px);

    /*transform: translateX(-10%) scale(0.8, 0.8);*/
  }
  
  .tabletop h4 {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    color: #000000;
    flex-direction: column;
    font-size:4vmin;
    text-align: right;
} 
  #reveal {
    float: right;
    display: inline-table;
    padding-right: 10px;
    width: calc(50% - 10px);
  }
#scratcher-box {
  width:22em;
  align-content: left;
  height:22em;
  position:absolute;
  transform: translateY(-50%);
  /* background-color: #FFFFFF; */
  top: 55%;
  left: 0%;
  border-radius: 5%;
}
/* Styles for mobile phones */ 
@media (max-height:320px), (max-width:620){ 
  
  .pagetop h1 {
    font-size: calc(2rem + 0.55vw);
  }
  .pagetop h4 {
    font-size: calc(0.5rem + 0.55vw);
  }
  .pagetop h3 {
    font-size: calc(0.7rem + 1vw);
  }
  #scratcher-box {
    scale: 0.8;
    top:40% ;
  } 
  #t1
  {
    width: calc(40% - 10px);

  }
  #reveal {
    width: calc(45% - 10px);

  }
}
@media (min-height: 352px), (max-height: 400px) { 
  .pagetop h1 {
    font-size: calc(3rem + 0.55vw);
  }
  .pagetop h4 {
    font-size: calc(0.5rem + 0.70vw);
  }
  .pagetop h3 {
    font-size: calc(0.7rem + 1.5vw);
  }
  #scratcher-box {
    scale: 0.95;
    top: 60%
  }
  #t1
  {
    width: calc(40% - 10px);

  }
  #reveal {
    width: calc(45% - 10px);

  }
}
@media (max-height:351px), (min-height:319){ 
  
  #scratcher-box {
    scale: 0.9;
    top:50% ;
  }
  .pagetop h1 {
    font-size: calc(2rem + 0.55vw);
  }
  #t1
  {
    width: calc(40% - 10px);

  }
  #reveal {
    width: calc(45% - 10px);

  }
}


table { 
  table-layout:fixed;
  /**transform: translate(0%, 50%);
  top: 75%;
  left: 10%;*/
}

.scratcher-bottom-margin {
  display:block;
  position: fixed;
  text-align: right;
  bottom: 1px;
  right: 1px;
  } 

#scratcher-box canvas {
cursor: grab;
}
#scratcher1, #scratcher2, #scratcher3, #scratcher4, #scratcher5, #scratcher6, #scratcher7, #scratcher8, #scratcher9 {
  width: 100%;
  padding: 5px;
  
}
#resetbutton {
border: none;
padding: 10px 20px;
color: #FFFFFF;
cursor: pointer;
transition: all 200ms ease-in-out;
transition-duration: 200ms;
transition-timing-function: ease-in-out;
transition-delay: 0s;
border-radius:1cap;
text-align: center;
text-decoration: none;
display:block;
font-size: 2vh;
margin: auto;
}
#resetbutton:hover {
  color: #000000;
  background:snow!important;
  border: 1px solid transparent;
}
#baby{
  font-weight: 600;
}
/* modal window styles */
button {
  background-color: #04AA6D;
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  cursor: pointer;
  width: 100%;
  opacity: 0.9;
}

button:hover {
  opacity:1;
}

/* Float cancel and delete buttons and add an equal width */
.cancelbtn, .deletebtn {
  float: left;
  width: 50%;
}

/* Add a color to the cancel button */
.cancelbtn {
  background-color: #ccc;
  color: black;
}

/* Add a color to the delete button */
.deletebtn {
  background-color: #45a14d;
}

/* Add padding and center-align text to the container */
.container {
  padding: 16px;
  text-align: center;
}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: #afafafee;
  padding-top: 50px;
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
  border: 1px solid #888;
  width: 60%; /* Could be more or less, depending on screen size */
  word-break: break-word;

}
h2 {
  color: #000000 !important;
  font-weight: 100;
  white-space: normal;
}
/* Style the horizontal ruler */
hr {
  border: 1px solid #f1f1f1;
  margin-bottom: 25px;
}
 
/* The Modal Close Button (x) */
.close {
  position: absolute;
  right: 35px;
  top: 15px;
  font-size: 40px;
  font-weight: bold;
  color: #f1f1f1;
}

.close:hover,
.close:focus {
  color: #f44336;
  cursor: pointer;
}

/* Clear floats */
.clearfix::after {
  content: "";
  clear: both;
  display: table;
}

/* Change styles for cancel button and delete button on extra small screens */
@media screen and (max-width: 300px) {
  .cancelbtn, .deletebtn {
     width: 100%;
  }
}

